maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:14: error: not found: value overBiscuit
  while (!overBiscuit) {
          ^