maze.island.IslandMaze.scala.code
override def run() {
  var c = 0
  while (c!=1) {
    if (!murNord) {
    	avance()
    	if (getY==0) {
        c=1
      }
    }
    else
    	keephandonwall
  }
  while (!overBiscuit) {
    keephandonwall
  }
  prendBiscuit()
}

def keephandonwall = {
  gauche()
  while (estFaceMur())
    droite()
  avance()
}

def overbiscuit:Boolean = {
  if (estSurBiscuit())
  	return true
  return false
}

def murNord:Boolean = {
  setDirection(Direction.NORTH)
  if (estFaceMur())
  	return true
  return false
}